// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`real-repo harness: gems (vite-react-bun-feature-first) matches golden snapshots (volatile metadata stripped): gems-SKILL.md 1`] = `
"---
name: gems-approval-fixture-best-practices
description: Best practices and architecture guide for gems-approval-fixture (auto-generated by mp-sentinel)
---

# gems-approval-fixture Best Practices

> Auto-generated by mp-sentinel - re-run \`bun run agent:skills:refresh\` to update.

## Required Agent Workflow

Before writing any code for **gems-approval-fixture**, follow these steps in order:

1. **Read SKILL.md** - project profile, conventions, pitfalls.
2. **Read local agent instructions**: \`.claude/skills\`. Project-authored instructions and rules OVERRIDE generated references when they conflict.
3. **Check parser health first**:
   - \`bun run sentinel:index --health --index-format json\` - health overview, parser breakdown
4. **Drilldown when health suggests issues**:
   - \`bun run sentinel:index --recovered --index-format json\` - list files parsed via fallback recoveries
   - \`bun run sentinel:index --parse-errors --index-format json\` - list files with hard parse errors
5. **Before editing**, use source index diagnostics:
   - \`bun run sentinel:index --agent-context <file> --index-format json\` - symbols, imports, dependents, next commands
   - \`bun run sentinel:index --explain-index <file> --index-format json\` - imports, dependents, symbols
   - \`bun run sentinel:index --find-symbol <name> --index-format json\` - search index for symbols
   - \`bun run sentinel:index --find-import <package-or-path> --index-format json\` - search index for import usage
   - \`bun run sentinel:index --find-code <query> --index-format json\` - search indexed code snippets
   - \`bun run sentinel:index --stats --index-format json\` - index statistics
   - \`bunx --bun mp-sentinel --explain-context --format json --files <file>\` - context enrichment preview
6. **Load only the relevant references**:
   - \`references/codebase-map.md\` - 6 mods, 3 entrypoints
   - \`references/testing-map.md\` - 0 test associations
   - \`references/dependencies.md\` - 1 dependencies
   - \`references/public-api.md\` - 0 risk items
   - \`references/code-style.md\` - detected indent, quotes, semicolons, formatter configs
   - \`references/language-patterns.md\` - per-language rules and language distribution
   - \`references/clean-code-checklist.md\` - code quality checklist with limits
7. **Respect the profile rules** - each profile has specific review pitfalls listed below.

**Quick-start search examples (from this codebase):**
   - \`bun run sentinel:index --find-import @/App --index-format json\` - top dependency (used by 1 files)
   - \`bun run sentinel:index --find-symbol App --index-format json\` - locate \`App\` (function) across the codebase

> **Auto-generated.** Regenerate via \`bun run agent:skills:refresh\`. Do not edit.

## Reference Routing

When touching files, load only the relevant references:

| Directory Pattern | Recommended References |
|---|---|
| \`src/app/\`, \`src/lib/\`, \`src/shared/gems-ui/\` | architecture, codebase-map |
| \`src/features/approval-detail/\` | modules/src-features-approval-detail, architecture, codebase-map |
| \`src/features/approval-inbox/\` | modules/src-features-approval-inbox, architecture, codebase-map |
| Other files | architecture, codebase-map |

## Overview

**Project:** gems-approval-fixture v1.0.0
**Profile:** react-spa
**Frameworks:** react, vite, typescript
**Package Manager:** bun
**Indexed Files:** 17
**Import Edges (graph):** 1
**Languages:** typescript (9), tsx (8)
**Key Scripts:** \`bun run test\`, \`bun run build\`, \`bun run dev\`

## First Files To Read

Read these before changing anything - they anchor how the codebase fits together:

- \`src/App.tsx\` - application entry
- \`src/app/router.tsx\` - application entry
- \`src/main.tsx\` - application entry

## Detected Conventions

Conventions observed in this codebase (from config and the import graph). Follow them unless project-authored rules say otherwise:

- Use the configured tsconfig path alias(es) \`@/*\` for internal imports - do not replace them with deep relative paths.
- Feature-first layout: each \`features/<feature>/\` folder owns \`types.ts\`, \`constants.ts\`, feature hooks (\`hooks/\` or \`use*.ts\`), a feature-local \`api/\` layer - add new feature code inside its feature folder, not in shared dirs.
- Reusable UI primitives live under \`src/shared/gems-ui/\` (built on Ant Design, Storybook) - extend the shared component there instead of duplicating one-off components.

## Common Change Paths

| Task | Where | Notes |
|---|---|---|
| New feature | \`src/features/approval-detail/\`, \`src/features/approval-inbox/\` | follow the feature-folder shape from Detected Conventions |
| UI work | \`src/shared/gems-ui/\` | extend the shared UI system instead of one-off components |


## Language & Framework Rules

Active packs: \`React\`, \`Vite\`, \`React Router\`, \`TanStack Query\`, \`Ant Design\`, \`Supabase\`, \`TypeScript (Strict)\`

Summary: 10 must, 15 should, 9 avoid rules across 7 pack(s).


### React Rules

- **MUST**: Follow the Rules of Hooks: only call hooks at the top level of a component or custom hook, never inside conditions, loops, or callbacks.
- **AVOID**: Do NOT fetch data directly in render. Use \`useEffect\`, React Query, SWR, or a framework data loader (Next.js, Remix).
- **MUST**: Add a stable \`key\` prop to all elements inside \`.map()\` or \`.filter()\` render loops. Use a unique ID, not the array index.
- **SHOULD**: Prefer function components with hooks over class components for new code.
- **SHOULD**: Extract reusable logic into custom hooks rather than duplicating \`useEffect\` / \`useState\` patterns.
- **AVOID**: Do NOT mutate state directly -- always use the setter from \`useState\` or produce new objects/arrays.
- **SHOULD**: Use \`React.memo\` sparingly and only after profiling. Premature memoization can increase memory pressure.
- **AVOID**: Do NOT declare components inside another component body -- they remount (state reset + full subtree re-render) on every parent render. Move them to module scope.
- **SHOULD**: Memoize context Provider values (\`useMemo\`) and keep state as close to where it is used as possible, so one state change does not re-render an entire page.

### Vite Rules

- **MUST**: Client-exposed environment variables must use the \`VITE_\` prefix and be read via \`import.meta.env\`, never \`process.env\`.
- **SHOULD**: Use dynamic \`import()\` for large or rarely used modules so Vite can split them into separate chunks.
- **SHOULD**: Import static assets through the module graph (or Vite's public directory for verbatim files) instead of hardcoding paths, so hashing and bundling work.
- **AVOID**: Do NOT import Node.js built-ins (\`fs\`, \`path\`, etc.) in client code -- Vite targets the browser; keep Node-only logic in config or server files.

### React Router Rules

- **SHOULD**: Lazy-load route components (\`React.lazy\` or the router's \`lazy\` option) so each route becomes its own chunk.
- **MUST**: Navigate with \`<Link>\`/\`<NavLink>\` or \`useNavigate()\`, never \`window.location\` assignments, to preserve client-side routing.
- **SHOULD**: Validate route params from \`useParams()\` before use -- they are always \`string | undefined\`, never trust them as well-formed IDs.
- **AVOID**: Avoid imperative redirects inside \`useEffect\` when a declarative \`<Navigate>\` or route loader/guard can express the same logic.

### TanStack Query Rules

- **MUST**: Query keys must be stable, serializable arrays that include every variable the query function depends on.
- **SHOULD**: After mutations, invalidate or update the affected queries (\`queryClient.invalidateQueries\` / \`setQueryData\`) instead of refetching manually.
- **AVOID**: Do NOT copy query results into \`useState\` -- read from the query cache; mirrored state goes stale and double-renders.
- **SHOULD**: Handle \`isPending\` / \`isError\` states explicitly in the UI rather than assuming data is always available.

### Ant Design Rules

- **SHOULD**: Let \`Form\` own field state via \`name\` + \`rules\`; do not mirror field values into \`useState\` alongside \`Form\` instances.
- **SHOULD**: Customize styling through \`ConfigProvider\` theme tokens instead of overriding \`.ant-*\` class names with CSS.
- **MUST**: Always provide a stable \`rowKey\` for \`Table\` (a unique record field, not the array index).
- **AVOID**: Prefer the hook-based \`App\`/\`useApp()\` or \`message.useMessage()\` APIs over static \`message\`/\`notification\`/\`Modal\` calls so theme and context apply.

### Supabase Rules

- **MUST**: Never ship the \`service_role\` key to client code. Only the anon/publishable key may appear in browser bundles or client env vars.
- **MUST**: Treat Row Level Security as the authorization boundary: every user-facing table needs RLS policies; do not rely on client-side filtering.
- **MUST**: Supabase query builders return \`{ data, error }\` without throwing -- check \`error\` (and null \`data\`) on every call.
- **SHOULD**: Create the Supabase client once (module-level or context) and reuse it; per-call \`createClient\` leaks connections and auth listeners.

### TypeScript (Strict) Rules

- **AVOID**: Do NOT use \`any\` type. If unavoidable (e.g., untyped third-party types), isolate with a \`// eslint-disable-next-line\` and a comment explaining why.
- **MUST**: Respect all strict \`tsconfig.json\` flags enabled in this project (see Code Conventions for the exact list).
- **SHOULD**: Prefer \`interface\` over \`type\` for object shapes that may be extended. Use \`type\` for unions, intersections, and mapped types.
- **SHOULD**: Use \`const\` assertions (\`as const\`) for literal types and tuple inference.
- **AVOID**: Do NOT use \`namespace\` or \`module\` declarations -- use ES module imports/exports instead.



## Clean Code Policy

These rules are enforced by the agent when writing or reviewing code:

- **Maximum file length:** 500 lines (hard limit). Refactor before adding more.
- **Warning at:** 350 lines - consider splitting into smaller modules.
- **Maximum function body:** 80 lines. Extract helpers for readability.
- **Maximum parameters:** 5 per function. Use an options object for more.
- **Cyclomatic complexity hint:** 12. High-complexity functions should be refactored.



## File Size Policy

Hard limit: **500 lines** per file.

- **Current codebase P50:** 1 lines
- **Current codebase P95:** 1 lines
- **Current max file:** 1 lines

No files exceed the 500-line limit. Keep it this way.


## References

- [Architecture & Hub Files](./references/architecture.md)
- [Module Map](./references/modules.md)
- [Profile Rules & Commands](./references/commands.md)
- [Codebase Map](./references/codebase-map.md)
- [Testing Map](./references/testing-map.md)
- [Dependencies](./references/dependencies.md)
- [Public API](./references/public-api.md)
- [Code Style](./references/code-style.md)
- [Language Patterns](./references/language-patterns.md)
- [Clean Code Checklist](./references/clean-code-checklist.md)
- [Module: src/features/approval-detail](./references/modules/src-features-approval-detail.md)
- [Module: src/features/approval-inbox](./references/modules/src-features-approval-inbox.md)"
`;

exports[`real-repo harness: gems (vite-react-bun-feature-first) matches golden snapshots (volatile metadata stripped): gems-codebase-map.md 1`] = `
"## Codebase Map

### Module Ownership

#### \`src/features/approval-detail/\` - type (5 source / 0 test files)
- Key files: \`src/features/approval-detail/api/get.ts\`, \`src/features/approval-detail/DetailPage.tsx\`, \`src/features/approval-detail/hooks/useDetail.ts\`, \`src/features/approval-detail/types.ts\`
- Key symbols: \`getDetail\` (function), \`DetailPage\` (function), \`useDetail\` (function), \`DetailItem\` (interface)

#### \`src/features/approval-inbox/\` - type (5 source / 0 test files)
- Key files: \`src/features/approval-inbox/api/list.ts\`, \`src/features/approval-inbox/InboxPage.tsx\`, \`src/features/approval-inbox/types.ts\`, \`src/features/approval-inbox/useInbox.ts\`
- Key symbols: \`listInbox\` (function), \`InboxPage\` (function), \`InboxItem\` (interface), \`useInbox\` (function)

#### \`src/shared/gems-ui/\` - unknown (3 source / 0 test files)
- Key files: \`src/shared/gems-ui/Button.tsx\`, \`src/shared/gems-ui/Modal.tsx\`, \`src/shared/gems-ui/Table.stories.tsx\`
- Key symbols: \`GemsButton\` (function), \`GemsModal\` (function), \`TableStories\` (function)

#### \`src/\` - unknown (2 source / 0 test files)
- Key files: \`src/App.tsx\`
- Key symbols: \`App\` (function)

#### \`src/app/\` - unknown (1 source / 0 test files)
- Key files: \`src/app/router.tsx\`
- Key symbols: \`router\` (function)

#### \`src/lib/\` - unknown (1 source / 0 test files)

### Entrypoints

- **[APP]** \`src/App.tsx\` - application entry
- **[APP]** \`src/app/router.tsx\` - application entry
- **[APP]** \`src/main.tsx\` - application entry"
`;

exports[`real-repo harness: gems (vite-react-bun-feature-first) matches golden snapshots (volatile metadata stripped): gems-commands.md 1`] = `
"## Project Profile: react-spa

### Commands

Package manager: \`bun\`

\`\`\`sh
bun run agent:skills:refresh  # mp-sentinel create-skills --all-agents --force
bun run build  # vite build
bun run dev  # vite
bun run sentinel:context  # mp-sentinel indexing --agent-context
bun run sentinel:index  # mp-sentinel indexing
bun run test  # vitest run
\`\`\`

### Module Ownership

Modules and their responsibilities:

- \`src/features/approval-detail/\` - 5 source file(s)
- \`src/features/approval-inbox/\` - 5 source file(s)
- \`src/shared/gems-ui/\` - 3 source file(s)
- \`src/\` - 2 source file(s)
- \`src/app/\` - 1 source file(s)
- \`src/lib/\` - 1 source file(s)

### Import Conventions

- Module resolution is \`bundler\` - do **not** add \`.js\` extensions to internal imports.
- **Avoid \`any\`** - if unavoidable, isolate with a comment explaining why.
- Respect the strict \`tsconfig.json\` flags enabled here: \`strict\`, \`noUncheckedIndexedAccess\`.
- Respect \`tsconfig.json\` path aliases - do not bypass with relative traversals.

### Review Pitfalls

- **Route-level code splitting** - lazy-load route components (\`React.lazy\` / router lazy routes) to keep the initial bundle small.
- **Server state separation** - keep server data in a data library (React Query/SWR); do not mirror it into local component state.
- **Hooks discipline** - complete dependency arrays; stable keys (not array indices) in render loops.
- **No direct DOM mutations** - use refs and effects, never \`document.querySelector\` outside isolated helpers.
- **Bundle size vigilance** - audit new dependencies' impact on the client bundle; prefer dynamic imports for heavy libraries."
`;

exports[`real-repo harness: gems (vite-react-bun-feature-first) matches golden snapshots (volatile metadata stripped): gems-module-approval-inbox.md 1`] = `
"## Module: \`src/features/approval-inbox/\`

Role: type. 5 source file(s), 0 test file(s).

### Key Files

- \`src/features/approval-inbox/api/list.ts\` - \`listInbox\`
- \`src/features/approval-inbox/InboxPage.tsx\` - \`InboxPage\`
- \`src/features/approval-inbox/types.ts\` - \`InboxItem\`
- \`src/features/approval-inbox/useInbox.ts\` - \`useInbox\`

### Key Symbols

\`listInbox\` (function), \`InboxPage\` (function), \`InboxItem\` (interface), \`useInbox\` (function)

### Tests

- 3 file(s) without test coverage in this module

### Conventions

- Feature-first layout: each \`features/<feature>/\` folder owns \`types.ts\`, \`constants.ts\`, feature hooks (\`hooks/\` or \`use*.ts\`), a feature-local \`api/\` layer - add new feature code inside its feature folder, not in shared dirs.
"
`;

exports[`real-repo harness: mvp (next-pnpm-bundler-supabase) matches golden snapshots (volatile metadata stripped): mvp-SKILL.md 1`] = `
"---
name: mvp-listening-fixture-best-practices
description: Best practices and architecture guide for mvp-listening-fixture (auto-generated by mp-sentinel)
---

# mvp-listening-fixture Best Practices

> Auto-generated by mp-sentinel - re-run \`pnpm exec mp-sentinel create-skills --all-agents --force\` to update.

## Required Agent Workflow

Before writing any code for **mvp-listening-fixture**, follow these steps in order:

1. **Read SKILL.md** - project profile, conventions, pitfalls.
2. **Read local agent instructions**: \`.claude/skills\`. Project-authored instructions and rules OVERRIDE generated references when they conflict.
3. **Check parser health first**:
   - \`pnpm exec mp-sentinel indexing --health --index-format json\` - health overview, parser breakdown
4. **Drilldown when health suggests issues**:
   - \`pnpm exec mp-sentinel indexing --recovered --index-format json\` - list files parsed via fallback recoveries
   - \`pnpm exec mp-sentinel indexing --parse-errors --index-format json\` - list files with hard parse errors
5. **Before editing**, use source index diagnostics:
   - \`pnpm exec mp-sentinel indexing --agent-context <file> --index-format json\` - symbols, imports, dependents, next commands
   - \`pnpm exec mp-sentinel indexing --explain-index <file> --index-format json\` - imports, dependents, symbols
   - \`pnpm exec mp-sentinel indexing --find-symbol <name> --index-format json\` - search index for symbols
   - \`pnpm exec mp-sentinel indexing --find-import <package-or-path> --index-format json\` - search index for import usage
   - \`pnpm exec mp-sentinel indexing --find-code <query> --index-format json\` - search indexed code snippets
   - \`pnpm exec mp-sentinel indexing --stats --index-format json\` - index statistics
   - \`pnpm exec mp-sentinel --explain-context --format json --files <file>\` - context enrichment preview
6. **Load only the relevant references**:
   - \`references/codebase-map.md\` - 8 mods, 4 entrypoints
   - \`references/testing-map.md\` - 0 test associations
   - \`references/dependencies.md\` - 0 dependencies
   - \`references/public-api.md\` - 0 risk items
   - \`references/code-style.md\` - detected indent, quotes, semicolons, formatter configs
   - \`references/language-patterns.md\` - per-language rules and language distribution
   - \`references/clean-code-checklist.md\` - code quality checklist with limits
7. **Respect the profile rules** - each profile has specific review pitfalls listed below.

**Quick-start search examples (from this codebase):**
   - \`pnpm exec mp-sentinel indexing --find-symbol DashboardLayout --index-format json\` - locate \`DashboardLayout\` (function) across the codebase
   - \`pnpm exec mp-sentinel indexing --find-symbol DashboardLayout --index-format json\` - locate \`DashboardLayout\` (function) across the codebase

> **Auto-generated.** Regenerate via \`pnpm exec mp-sentinel create-skills --all-agents --force\`. Do not edit.

## Reference Routing

When touching files, load only the relevant references:

| Directory Pattern | Recommended References |
|---|---|
| \`src/app/\`, \`src/components/\`, \`src/lib/\`, \`src/types/\` | architecture, codebase-map |
| Other files | architecture, codebase-map |

## Overview

**Project:** mvp-listening-fixture v1.0.0
**Profile:** react-next
**Frameworks:** react, next.js, typescript
**Package Manager:** pnpm
**Indexed Files:** 9
**Import Edges (graph):** 0
**Languages:** tsx (5), typescript (4)
**Key Scripts:** \`pnpm run test\`, \`pnpm run build\`, \`pnpm run dev\`

## First Files To Read

Read these before changing anything - they anchor how the codebase fits together:

- \`src/app/layout.tsx\` - root layout (App Router)

## Detected Conventions

Conventions observed in this codebase (from config and the import graph). Follow them unless project-authored rules say otherwise:

- tsconfig defines path alias(es) \`@/*\`; prefer them over deep relative imports when touching import-heavy files.

## Common Change Paths

| Task | Where | Notes |
|---|---|---|
| API / data work | \`src/app/api/\` | - |
| UI work | \`src/components/audio/\`, \`src/components/review/\` | - |


## Language & Framework Rules

Active packs: \`React\`, \`Next.js\`, \`Supabase\`, \`TypeScript (Strict)\`

Summary: 8 must, 10 should, 6 avoid rules across 4 pack(s).


### React Rules

- **MUST**: Follow the Rules of Hooks: only call hooks at the top level of a component or custom hook, never inside conditions, loops, or callbacks.
- **AVOID**: Do NOT fetch data directly in render. Use \`useEffect\`, React Query, SWR, or a framework data loader (Next.js, Remix).
- **MUST**: Add a stable \`key\` prop to all elements inside \`.map()\` or \`.filter()\` render loops. Use a unique ID, not the array index.
- **SHOULD**: Prefer function components with hooks over class components for new code.
- **SHOULD**: Extract reusable logic into custom hooks rather than duplicating \`useEffect\` / \`useState\` patterns.
- **AVOID**: Do NOT mutate state directly -- always use the setter from \`useState\` or produce new objects/arrays.
- **SHOULD**: Use \`React.memo\` sparingly and only after profiling. Premature memoization can increase memory pressure.
- **AVOID**: Do NOT declare components inside another component body -- they remount (state reset + full subtree re-render) on every parent render. Move them to module scope.
- **SHOULD**: Memoize context Provider values (\`useMemo\`) and keep state as close to where it is used as possible, so one state change does not re-render an entire page.

### Next.js Rules

- **MUST**: Use \`'use client'\` and \`'use server'\` directives correctly. Client components cannot import server-only modules (Node fs, direct DB access, etc.).
- **SHOULD**: Prefer Server Components by default. Only add \`'use client'\` when interactivity (hooks, event handlers, browser APIs) is required.
- **MUST**: Use route segment config (\`export const dynamic = 'force-static'\`, etc.) at the top of page/layout files for fine-grained caching control.
- **SHOULD**: Use \`next/image\` for image optimization instead of \`<img>\` tags.
- **SHOULD**: Colocate data fetching close to consuming components. Avoid prop-drilling data through more than 2 layers.
- **AVOID**: Do NOT import large client-side libraries in Server Components that re-export them -- this can bloat the client bundle.

### Supabase Rules

- **MUST**: Never ship the \`service_role\` key to client code. Only the anon/publishable key may appear in browser bundles or client env vars.
- **MUST**: Treat Row Level Security as the authorization boundary: every user-facing table needs RLS policies; do not rely on client-side filtering.
- **MUST**: Supabase query builders return \`{ data, error }\` without throwing -- check \`error\` (and null \`data\`) on every call.
- **SHOULD**: Create the Supabase client once (module-level or context) and reuse it; per-call \`createClient\` leaks connections and auth listeners.

### TypeScript (Strict) Rules

- **AVOID**: Do NOT use \`any\` type. If unavoidable (e.g., untyped third-party types), isolate with a \`// eslint-disable-next-line\` and a comment explaining why.
- **MUST**: Respect all strict \`tsconfig.json\` flags enabled in this project (see Code Conventions for the exact list).
- **SHOULD**: Prefer \`interface\` over \`type\` for object shapes that may be extended. Use \`type\` for unions, intersections, and mapped types.
- **SHOULD**: Use \`const\` assertions (\`as const\`) for literal types and tuple inference.
- **AVOID**: Do NOT use \`namespace\` or \`module\` declarations -- use ES module imports/exports instead.



## Clean Code Policy

These rules are enforced by the agent when writing or reviewing code:

- **Maximum file length:** 500 lines (hard limit). Refactor before adding more.
- **Warning at:** 350 lines - consider splitting into smaller modules.
- **Maximum function body:** 80 lines. Extract helpers for readability.
- **Maximum parameters:** 5 per function. Use an options object for more.
- **Cyclomatic complexity hint:** 12. High-complexity functions should be refactored.



## File Size Policy

Hard limit: **500 lines** per file.

- **Current codebase P50:** 1 lines
- **Current codebase P95:** 1 lines
- **Current max file:** 1 lines

No files exceed the 500-line limit. Keep it this way.


## References

- [Architecture & Hub Files](./references/architecture.md)
- [Module Map](./references/modules.md)
- [Profile Rules & Commands](./references/commands.md)
- [Codebase Map](./references/codebase-map.md)
- [Testing Map](./references/testing-map.md)
- [Dependencies](./references/dependencies.md)
- [Public API](./references/public-api.md)
- [Code Style](./references/code-style.md)
- [Language Patterns](./references/language-patterns.md)
- [Clean Code Checklist](./references/clean-code-checklist.md)"
`;

exports[`real-repo harness: mvp (next-pnpm-bundler-supabase) matches golden snapshots (volatile metadata stripped): mvp-codebase-map.md 1`] = `
"## Codebase Map

### Module Ownership

#### \`src/app/(dashboard)/\` - unknown (2 source / 0 test files)
- Key files: \`src/app/(dashboard)/layout.tsx\`, \`src/app/(dashboard)/page.tsx\`
- Key symbols: \`DashboardLayout\` (function), \`DashboardPage\` (function)

#### \`src/app/\` - unknown (1 source / 0 test files)
- Key files: \`src/app/layout.tsx\`
- Key symbols: \`RootLayout\` (function)

#### \`src/app/api/\` - unknown (1 source / 0 test files)
- Key files: \`src/app/api/users/route.ts\`
- Key symbols: \`usersRoute\` (function)

#### \`src/components/audio/\` - unknown (1 source / 0 test files)
- Key files: \`src/components/audio/Player.tsx\`
- Key symbols: \`Player\` (function)

#### \`src/components/review/\` - unknown (1 source / 0 test files)
- Key files: \`src/components/review/ReviewCard.tsx\`
- Key symbols: \`ReviewCard\` (function)

#### \`src/lib/security/\` - unknown (1 source / 0 test files)
- Key files: \`src/lib/security/csp.ts\`
- Key symbols: \`csp\` (function)

#### \`src/lib/supabase/\` - unknown (1 source / 0 test files)
- Key files: \`src/lib/supabase/client.ts\`
- Key symbols: \`supabaseClient\` (function)

#### \`src/types/\` - type (1 source / 0 test files)
- Key files: \`src/types/index.ts\`
- Key symbols: \`Listening\` (interface)

### Entrypoints

- **[ROUTE]** \`src/app/(dashboard)/layout.tsx\` - App Router route file
- **[ROUTE]** \`src/app/(dashboard)/page.tsx\` - App Router route file
- **[ROUTE]** \`src/app/api/users/route.ts\` - App Router route file
- **[ROUTE]** \`src/app/layout.tsx\` - App Router route file"
`;

exports[`real-repo harness: mvp (next-pnpm-bundler-supabase) matches golden snapshots (volatile metadata stripped): mvp-commands.md 1`] = `
"## Project Profile: react-next

### Commands

Package manager: \`pnpm\`

\`\`\`sh
pnpm run build  # next build
pnpm run dev  # next dev
pnpm run test  # vitest run
\`\`\`

### Module Ownership

Modules and their responsibilities:

- \`src/app/(dashboard)/\` - 2 source file(s)
- \`src/app/\` - 1 source file(s)
- \`src/app/api/\` - 1 source file(s)
- \`src/components/audio/\` - 1 source file(s)
- \`src/components/review/\` - 1 source file(s)
- \`src/lib/security/\` - 1 source file(s)
- \`src/lib/supabase/\` - 1 source file(s)
- \`src/types/\` - 1 source file(s)

### Import Conventions

- Module resolution is \`bundler\` - do **not** add \`.js\` extensions to internal imports.
- **Avoid \`any\`** - if unavoidable, isolate with a comment explaining why.
- Respect the strict \`tsconfig.json\` flags enabled here: \`strict\`.
- Respect \`tsconfig.json\` path aliases - do not bypass with relative traversals.

### Review Pitfalls

- **Server/Client boundary** - avoid server-only imports in client components; use \`'use server'\` / \`'use client'\` split.
- **Data fetching colocation** - keep data fetching close to consuming component; avoid prop-drill across >2 layers.
- **No direct DOM mutations** - use refs and effects, never \`document.querySelector\` outside isolated helpers.
- **Image optimization** - prefer \`next/image\` over \`<img>\`.
- **Bundle size vigilance** - new deps in page components can bloat route chunks; audit with \`next bundle-analyzer\`."
`;
